--- a/html/productos.html
+++ b/html/productos.html
@@ -8,14 +8,14 @@
 
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/estilo.css">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   </head>
   <body class="gridpadreProductos">
 
     <header class="headerProductos">
     <div>
-      <img class="logo" src="/img/logo.png" alt="logo" />
+      <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
   </div>
 
   <h1>Productos</h1>
@@ -35,6 +35,7 @@
 
   
   <h5 id="h5" class="textoCentral tituloNuestrosproductos">NUESTROS PRODUCTOS</h5>
+  <div></div>
   <div class="flexProductos productosBloque1">
   <img class="imagProductos" src="/img/producto1.jpg" alt="producto 1">
   <img class="imagProductos" src="/img/producto2.jpg" alt="producto2">
@@ -97,5 +98,9 @@
 
 </footer>
 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
   </body>
 </html>
