--- a/html/consejosypreguntas.html
+++ b/html/consejosypreguntas.html
@@ -8,12 +8,13 @@
 
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/estilo.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body class="gridpadreConsejos">
 
     <header class="headerConsejos">
       <div>
-        <img class="logo" src="/img/logo.png" alt="logo" />
+        <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
       </div>
       <h1>Consejos y Preguntas Frecuentes</h1>
 
@@ -108,5 +109,10 @@
 
 
     </section>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
