--- a/html/tienda.html
+++ b/html/tienda.html
@@ -8,13 +8,14 @@
 
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/estilo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   
   <body class="gridpadreTienda">
 
     <header class="headerTienda">
       <div>
-        <img class="logo" src="/img/logo.png" alt="logo" />
+        <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
       </div>
 
       <h1>Tienda</h1>
@@ -116,5 +117,9 @@
 
 </footer>
 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
   </body>
 </html>
