--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/estilo.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
   </head>
   <body class="gridPadre">
 
     <header class="headerIndex">
     <div>
-        <img class="logo" src="/img/logo.png" alt="logo" />
+        <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
     </div>
 
     <h1>Mistica Natural</h1>
@@ -36,7 +37,7 @@
     </header>
 
     <div class="imagenEnc imagenIndex">
-        <img class="imagenEncabezado" src="/img/fondo.jpeg" alt="imagenMistica">
+        <img data-aos="flip-left" class="imagenEncabezado" src="/img/fondo.jpeg" alt="imagenMistica">
     </div>
 
     
@@ -117,6 +118,11 @@
         </ul>
 
 </footer>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
   </body>
 </html>
