Cambios de enlaces

--- a/html/productos.html
+++ b/html/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
 
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/estilo.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -15,7 +15,7 @@
 
     <header class="headerProductos">
     <div>
-      <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
+      <img data-aos="flip-left" class="logo" src="../img/logo.png" alt="logo" />
   </div>
 
   <h1>Productos</h1>
@@ -37,9 +37,9 @@
   <h5 id="h5" class="textoCentral tituloNuestrosproductos">NUESTROS PRODUCTOS</h5>
   <div></div>
   <div class="flexProductos productosBloque1">
-  <img class="imagProductos" src="/img/producto1.jpg" alt="producto 1">
-  <img class="imagProductos" src="/img/producto2.jpg" alt="producto2">
-  <img class="imagProductos" src="/img/producto3.jpg" alt="producto3">
+  <img class="imagProductos" src="../img/producto1.jpg" alt="producto 1">
+  <img class="imagProductos" src="../img/producto2.jpg" alt="producto2">
+  <img class="imagProductos" src="../img/producto3.jpg" alt="producto3">
 </div>
 
 <div class="flexProductos productosBloque2">
@@ -49,9 +49,9 @@
 </div>
 
 <div class="flexProductos productosBloque3">
-  <img class="imagProductos" src="/img/producto4.jpg" alt="producto3">
-  <img class="imagProductos" src="/img/producto5.jpg" alt="producto3">
-  <img class="imagProductos" src="/img/producto6.jpg" alt="producto3">
+  <img class="imagProductos" src="../img/producto4.jpg" alt="producto3">
+  <img class="imagProductos" src="../img/producto5.jpg" alt="producto3">
+  <img class="imagProductos" src="../img/producto6.jpg" alt="producto3">
 
 </div>
 
