--- a/html/contacto.html
+++ b/html/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
 
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/estilo.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
@@ -15,7 +15,7 @@
 
     <header class="headerContacto">
       <div>
-        <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
+        <img data-aos="flip-left" class="logo" src="../img/logo.png" alt="logo" />
       </div>
 
       <h1>Contacto</h1>
