--- a/html/tienda.html
+++ b/html/tienda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda</title>
 
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/estilo.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
@@ -15,7 +15,7 @@
 
     <header class="headerTienda">
       <div>
-        <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
+        <img data-aos="flip-left" class="logo" src="../img/logo.png" alt="logo" />
       </div>
 
       <h1>Tienda</h1>
@@ -38,7 +38,7 @@
     <h3 class="flexh3Carrito carritoTienda">Carrito de compra</h3>
 
     <section class="flexTienda imagendeTienda">
-      <img class="imagenTienda" src="/img/tienda.jpg" alt="imagenTienda" />
+      <img class="imagenTienda" src="../img/tienda.jpg" alt="imagenTienda" />
       <button class="redondo">Cantidad</button>
     </section>
 
