--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mistica Natural</title>
 
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/estilo.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
@@ -15,7 +15,7 @@
 
     <header class="headerIndex">
     <div>
-        <img data-aos="flip-left" class="logo" src="/img/logo.png" alt="logo" />
+        <img data-aos="flip-left" class="logo" src="./img/logo.png" alt="logo" />
     </div>
 
     <h1>Mistica Natural</h1>
@@ -37,7 +37,7 @@
     </header>
 
     <div class="imagenEnc imagenIndex">
-        <img data-aos="flip-left" class="imagenEncabezado" src="/img/fondo.jpeg" alt="imagenMistica">
+        <img data-aos="flip-left" class="imagenEncabezado" src="./img/fondo.jpeg" alt="imagenMistica">
     </div>
 
     
